hermon/archive/base-kustomize/hermon-ingest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermon-ingest
spec:
  selector:
    app: hermon-ingest
  ports:
    - name: http
      port: 5000
      targetPort: 5000
