hermon/archive/base-kustomize/hermon-ingest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermon-ingest
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ingest.hermon
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermon-ingest
                port:
                  number: 5000
